--- a/CommunityMarket/app/src/main/res/values/colors.xml
+++ b/CommunityMarket/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="likegris">#747474</color>
     <color name="likerouge">#ff4336</color>
     <color name="doux">#FFEB3B</color>
-    <color name="colorPrimary">#ff4336</color>
+    <color name="colorPrimary">#fff</color>
     <color name="colorPrimaryDark">#000</color>
     <color name="black">#000</color>
     <color name="blanc">#ffffff</color>
