--- a/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
@@ -148,9 +148,9 @@
                 android:id="@+id/post_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/new_button_add_button_end"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/new_button_add_button_end"
                 android:layout_marginBottom="70dp"
                 android:background="@drawable/button_background"
                 android:text="mettre en vendre"
