--- a/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
@@ -2,20 +2,20 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="220dp"
-    android:layout_height="220dp"
+    android:layout_width="@dimen/nouveaute_card_width_height"
+    android:layout_height="@dimen/nouveaute_card_width_height"
     android:layout_marginRight="7dp"
     android:clickable="true"
     android:focusable="true"
     android:layout_marginLeft="6dp"
     app:layout_goneMarginRight="6dp">
     <android.support.constraint.ConstraintLayout
-        android:layout_width="220dp"
-        android:layout_height="220dp"
+        android:layout_width="@dimen/nouveaute_card_width_height"
+        android:layout_height="@dimen/nouveaute_card_width_height"
         android:id="@+id/container">
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="@dimen/nouveaute_card_width_height"
+            android:layout_height="@dimen/nouveaute_card_width_height"
             android:elevation="5dp"
             android:id="@+id/card_nvx"
             app:cardBackgroundColor="@color/blanc"
@@ -27,9 +27,10 @@
 
 
                 <ImageView
+                    android:src="@drawable/t_shirt"
                     android:id="@+id/nouveaute_image"
                     android:layout_width="0dp"
-                    android:layout_height="105dp"
+                    android:layout_height="@dimen/nouveaut_image_height"
                     android:scaleType="centerCrop"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -37,15 +38,16 @@
 
                 <TextView
                     android:id="@+id/nouveaux_description_du_produit"
-                    android:layout_width="200dp"
+                    android:layout_width="@dimen/nouveaute_test_desc"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:ellipsize="end"
                     android:lines="3"
+                    android:text="olala un nouveaux vetement juste pour toi"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/nvx_item_nvx_desc"
+                    android:textSize="@dimen/item_principal_desc"
                     app:fontFamily="@font/nunito_bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.51"
@@ -56,45 +58,50 @@
                     android:id="@+id/nouveaux_image_profile"
                     android:layout_width="@dimen/nvx_item_nvx_image_dim_height_with"
                     android:layout_height="@dimen/nvx_item_nvx_image_dim_height_with"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="24dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="2dp"
+                    android:layout_marginBottom="4dp"
+                    android:src="@drawable/boy"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/nouveaux_description_du_produit"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="@+id/nouveaux_description_du_produit"
+                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_description_du_produit" />
 
                 <TextView
                     android:id="@+id/nouveaux_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="@dimen/principal_image_round_start"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="16dp"
+                    android:text="open market"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/nvx_item_nvx_name"
+                    android:textSize="@dimen/item_principal_name"
                     android:textStyle="bold"
                     android:theme="@style/ToolbarTheme"
                     app:fontFamily="@font/nunito_bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/nouveaux_image_profile"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.351"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@+id/nouveaux_image_profile"
+                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_tire" />
 
                 <TextView
                     android:id="@+id/nouveaux_temps"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:textSize="@dimen/nvx_item_nvx_date"
+                    android:layout_marginBottom="8dp"
                     android:fontFamily="@font/nunito_bold"
+                    android:text="17 juil 2019"
+                    android:textSize="@dimen/nvx_item_nvx_date"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.34"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintEnd_toEndOf="@+id/nouveaux_user_name"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/nouveaux_user_name"
+                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_user_name" />
 
                 <ImageView
                     android:id="@+id/like_image"
@@ -132,17 +139,21 @@
                     android:id="@+id/nouveaux_prix"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="24dp"
                     android:layout_marginBottom="12dp"
                     android:fontFamily="sans-serif-condensed"
+                    android:text="5000"
                     android:textColor="@color/orange"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/nouveaute_text_price"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/nouveaux_user_name"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.986"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintHorizontal_bias="0.953"
+                    app:layout_constraintStart_toEndOf="@+id/nouveaux_user_name"
+                    app:layout_constraintTop_toTopOf="@+id/nouveaux_user_name"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/nouveaux_tire"
@@ -154,6 +165,7 @@
                     android:fontFamily="sans-serif-condensed"
                     android:lines="1"
                     android:textColor="@color/black"
+                    android:text="chaussure blanche"
                     android:textSize="@dimen/nvx_item_nvx_titre"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/nouveaux_image_profile"
@@ -183,8 +195,10 @@
                     android:theme="@style/progress_theme"
                     app:layout_constraintBottom_toBottomOf="@+id/nouveaux_image_profile"
                     app:layout_constraintEnd_toEndOf="@+id/nouveaux_image_profile"
+                    app:layout_constraintHorizontal_bias="0.533"
                     app:layout_constraintStart_toStartOf="@+id/nouveaux_image_profile"
-                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_tire" />
+                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_tire"
+                    app:layout_constraintVertical_bias="0.588" />
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
