--- a/CommunityMarket/app/src/main/res/layout/right_item_chat.xml
+++ b/CommunityMarket/app/src/main/res/layout/right_item_chat.xml
@@ -34,21 +34,17 @@
             android:padding="8dp"
             android:text="Hello"
             android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="@dimen/item_principal_desc"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/current_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginTop="4dp"
             android:fontFamily="@font/righteous"
             android:textColor="@color/blanc"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/show_message"
             app:layout_constraintStart_toStartOf="@+id/show_message"
             app:layout_constraintTop_toBottomOf="@+id/show_message" />
