--- a/CommunityMarket/app/src/main/res/menu/accueil.xml
+++ b/CommunityMarket/app/src/main/res/menu/accueil.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/search"
-        android:title="profil"
+        android:title="search"
         android:icon="@drawable/ic_search"
-        app:showAsAction="always"
         android:orderInCategory="0"
+        app:showAsAction="always"
+
         />
     <item
         android:id="@+id/message"
         android:orderInCategory="1"
-        android:title="profil"
+        android:title="messages"
         android:icon="@drawable/ic_message_float_icon"
         app:showAsAction="always"
 
