--- a/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
@@ -15,7 +15,7 @@
     <dimen name="button_size_text">16sp</dimen>
 
     <!-- choice activity. -->
-    <dimen name="choice_Logo_margin_top">350dp</dimen>
+    <dimen name="choice_Logo_margin_top">300dp</dimen>
     <dimen name="choice_Logo_text_size">100sp</dimen>
     <dimen name="choice_button_top">200dp</dimen>
     <dimen name="choice_button_text_size">14dp</dimen>
@@ -66,7 +66,7 @@
     <dimen name="nvx_item_nvx_date">11sp</dimen>
     <dimen name="nvx_item_nvx_desc">14sp</dimen>
     <dimen name="nvx_item_nvx_prix">14sp</dimen>
-    <dimen name="nvx_item_nvx_titre">12sp</dimen>
+    <dimen name="nvx_item_nvx_titre">18sp</dimen>
     <dimen name="nvx_item_nvx_like_image">20sp</dimen>
     <!-- item layout post-->
     <dimen name="post_item_prix">12sp</dimen>
@@ -146,7 +146,7 @@
     <dimen name="new_detail_top_name_date">16dp</dimen>
     <dimen name="new_detail_height_button">55dp</dimen>
     <dimen name="new_detail_desc_margin_top">16dp</dimen>
-    <dimen name="new_detail_desc_text_size">28sp</dimen>
+    <dimen name="new_detail_desc_text_size">22sp</dimen>
     <dimen name="new_detail_height_image">60dp</dimen>
     <dimen name="new_detail_add_button">120dp</dimen>
     <dimen name="new_detail_add_height">50dp</dimen>
@@ -184,7 +184,7 @@
     <dimen name="commentaire_name_start">24dp</dimen>
     <dimen name="commentaire_text_desc_widht">800dp</dimen>
     //////////profil Activity
-    <dimen name="margin_top_new_profil_design">40dp</dimen>
+    <dimen name="margin_top_new_profil_design">180dp</dimen>
     <dimen name="new_profil_image_dimen">170dp</dimen>
     <dimen name="new_profil_margin_start">8dp</dimen>
     <dimen name="new_profil_margin_end">8dp</dimen>
@@ -192,7 +192,7 @@
     <dimen name="new_profil_name_text_size">24sp</dimen>
     <dimen name="new_profil_desc_widht">500dp</dimen>
     <dimen name="new_profil_margin_top">24dp</dimen>
-    <dimen name="image_enplacement_new_profil_margin_start">300dp</dimen>
+    <dimen name="image_enplacement_new_profil_margin_start">150dp</dimen>
     <dimen name="dimen_new_profil_phone_marging">110dp</dimen>
     <dimen name="new_profil_view_widht">700dp</dimen>
     <dimen name="new_profil_view_height">1dp</dimen>
@@ -227,7 +227,7 @@
     <dimen name="pub_button_start_end">100dp</dimen>
     <dimen name="pub_desc_top">40dp</dimen>
     ///detail_two
-    <dimen name="detail_image_top">440dp</dimen>
+    <dimen name="detail_image_top">360dp</dimen>
     <dimen name="detail_image_start">32dp</dimen>
     <dimen name="profil_detail_start_text">100dp</dimen>
     <dimen name="detail_text_size_two">24sp</dimen>
@@ -258,7 +258,13 @@
     <dimen name="principal_item_desc_text_two">450dp</dimen>
     <dimen name="principal_temps_top_two">8dp</dimen>
     <dimen name="login_text_size">80sp</dimen>
-    <dimen name="login_start_end">250dp</dimen>
+    <dimen name="login_start_end">220dp</dimen>
     <dimen name="search_profil_start">160dp</dimen>
+    <dimen name="nouveaute_test_desc">310dp</dimen>
+    <dimen name="nouveaute_card_width_height">340dp</dimen>
+    <dimen name="nouveaut_image_height">140dp</dimen>
+    <dimen name="nouveaute_text_price">20sp</dimen>
+    <dimen name="profil_place_witdh">220dp</dimen>
+
 
 </resources>
