--- a/CommunityMarket/app/src/main/res/layout/activity_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_notification.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar2"
+        android:id="@+id/toolbar_notification"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/gradient_list"
