--- a/CommunityMarket/app/src/main/res/layout/item_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_notification.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/image_des_like"
@@ -58,22 +57,23 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/righteous"
         android:text="a liker  ajouter votre publication a ses favories"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/nom_du_profil"
         app:layout_constraintHorizontal_bias="0.0"
-        android:fontFamily="@font/righteous"
-        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@+id/nom_du_profil"
         app:layout_constraintTop_toBottomOf="@+id/nom_du_profil" />
+
     <TextView
         android:id="@+id/text_des_commentaires"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/righteous"
         android:text=""
         app:layout_constraintEnd_toEndOf="@+id/nom_du_profil"
         app:layout_constraintHorizontal_bias="0.0"
-        android:fontFamily="@font/righteous"
         app:layout_constraintStart_toStartOf="@+id/nom_du_profil"
         app:layout_constraintTop_toBottomOf="@+id/nom_du_profil" />
 
