--- a/CommunityMarket/app/src/main/res/layout/activity_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_notification.xml
@@ -20,6 +20,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_notification"
         android:layout_width="0dp"
+        app:titleTextColor="@color/blanc"
+        android:theme="@style/ToolbarThemeTwo"
         android:layout_height="wrap_content"
         android:background="@drawable/gradient_list"
         app:layout_constraintEnd_toEndOf="parent"
