envoi des correction

--- a/CommunityMarket/app/src/main/res/layout/item_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_notification.xml
@@ -22,6 +22,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="28dp"
         android:src="@drawable/boy"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/image_des_like"
         app:layout_constraintStart_toEndOf="@+id/image_des_like"
         app:layout_constraintTop_toTopOf="@+id/image_des_like"
@@ -72,6 +73,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/righteous"
         android:text=""
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/nom_du_profil"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/nom_du_profil"
