--- a/CommunityMarket/app/src/main/res/layout/activity_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_notification.xml
@@ -10,12 +10,10 @@
         android:id="@+id/notification_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_notification" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_notification"
