--- a/CommunityMarket/app/src/main/res/layout/activity_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_notification.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".profile.NotificationActivity">
 
     <android.support.v7.widget.RecyclerView
@@ -18,6 +19,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_notification"
         android:layout_width="0dp"
+        app:title="notifications"
         app:titleTextColor="@color/blanc"
         android:theme="@style/ToolbarThemeTwo"
         android:layout_height="wrap_content"
