--- a/CommunityMarket/app/src/main/res/layout/item_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_notification.xml
@@ -2,25 +2,27 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/notification_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/black">
 
-    <ImageView
+    <pl.droidsonroids.gif.GifImageView
         android:id="@+id/image_des_like"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:visibility="invisible"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/heart_gif"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_like_accent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image_du_profil"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="8dp"
         android:src="@drawable/boy"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/image_des_like"
@@ -30,11 +32,11 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image_des_commentaire"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/ic_add_coment"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_add_coment_blanc"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +48,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/righteous"
         android:text="open market"
-        android:textColor="@color/black"
+        android:textColor="@color/blanc"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/image_du_profil"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,7 +61,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/righteous"
-        android:text="a liker  ajouter votre publication a ses favories"
+        android:text="A ajouter votre publication a ses favories"
+        android:textColor="@color/blanc"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/nom_du_profil"
         app:layout_constraintHorizontal_bias="0.0"
@@ -73,6 +76,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/righteous"
         android:text=""
+        android:textColor="@color/blanc"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/nom_du_profil"
         app:layout_constraintHorizontal_bias="0.0"
@@ -86,19 +90,40 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/righteous"
         android:text="17 juin 2019 "
+        android:textColor="@color/blanc"
         app:layout_constraintBottom_toBottomOf="@+id/image_du_profil"
         app:layout_constraintStart_toEndOf="@+id/image_du_profil"
         app:layout_constraintTop_toTopOf="@+id/image_du_profil" />
 
-    <ImageView
-        android:id="@+id/image_du_produit"
-        android:layout_width="350dp"
+    <android.support.v7.widget.CardView
+        android:layout_width="250dp"
         android:layout_height="150dp"
         android:layout_marginTop="8dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_des_likes"
-        app:srcCompat="@drawable/t_shirt" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/text_des_likes"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/text_des_commentaires"
+        app:layout_constraintTop_toBottomOf="@+id/text_des_likes">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/image_du_produit"
+                android:layout_width="250dp"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v7.widget.CardView>
+
+
 </android.support.constraint.ConstraintLayout>
