--- a/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
@@ -143,6 +143,7 @@
                     android:layout_marginBottom="32dp"
                     android:fontFamily="@font/righteous"
                     android:lineSpacingExtra="8dp"
+                    android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="@dimen/new_detail_desc_text_size"
                     android:textStyle="bold"
