--- a/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
@@ -42,6 +42,7 @@
                     android:layout_height="15dp"
                     app:civ_border_color="#05df29"
                     app:civ_border_width="10dp"
+                    android:src="@mipmap/ic_launcher"
                     android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="@+id/image_user"
                     app:layout_constraintEnd_toEndOf="@+id/image_user" />
