--- a/CommunityMarket/app/src/main/res/layout/item_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_notification.xml
@@ -125,5 +125,40 @@
 
     </android.support.v7.widget.CardView>
 
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/righteous"
+        android:text="Repondre"
+        android:textColor="@color/blanc"
+        app:layout_constraintBottom_toBottomOf="@+id/temps_de_la_notification"
+        app:layout_constraintStart_toEndOf="@+id/temps_de_la_notification"
+        app:layout_constraintTop_toTopOf="@+id/temps_de_la_notification" />
+
+    <ImageButton
+        android:id="@+id/image_lancerç_la_reponse"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/background_message_button"
+        app:layout_constraintBottom_toBottomOf="@+id/textView6"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="@+id/textView6"
+        app:srcCompat="@drawable/ic_message" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/notification_enable"
+        android:layout_width="15dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="8dp"
+        android:src="@mipmap/ic_launcher"
+        android:visibility="invisible"
+        app:civ_border_color="#05df29"
+        app:civ_border_width="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/image_lancerç_la_reponse"
+        app:layout_constraintStart_toEndOf="@+id/image_lancerç_la_reponse"
+        app:layout_constraintTop_toTopOf="@+id/image_lancerç_la_reponse" />
 
 </android.support.constraint.ConstraintLayout>
