--- a/CommunityMarket/app/src/main/res/layout/activity_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_notification.xml
@@ -27,4 +27,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/notification_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="@dimen/commentaire_circle_widht_height"
+        android:layout_height="@dimen/commentaire_circle_widht_height"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_notification" />
 </android.support.constraint.ConstraintLayout>
