--- a/CommunityMarket/app/src/main/res/layout/item_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_notification.xml
@@ -98,6 +98,7 @@
         app:layout_constraintTop_toTopOf="@+id/image_du_profil" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview_nnotification"
         android:layout_width="250dp"
         android:layout_height="150dp"
         android:layout_marginTop="8dp"
