--- a/CommunityMarket/app/src/main/res/layout/activity_sell_user.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_sell_user.xml
@@ -17,9 +17,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/righteous"
-        android:text="vide "
+        android:text="empty"
         android:textColor="@color/blanc"
-        android:textSize="24sp"
+        android:textSize="@dimen/detail_text_size"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
