--- a/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
@@ -273,6 +273,8 @@
     <dimen name="nouveaute_card_width_height">220dp</dimen>
     <dimen name="nouveaut_image_height">105dp</dimen>
     <dimen name="profil_place_witdh">100dp</dimen>
+    <dimen name="bottom_sheet_profil_top">120dp</dimen>
+    <dimen name="bottom_shit_view_height">55dp</dimen>
 
 
 </resources>
