--- a/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
@@ -265,6 +265,9 @@
     <dimen name="nouveaut_image_height">140dp</dimen>
     <dimen name="nouveaute_text_price">20sp</dimen>
     <dimen name="profil_place_witdh">220dp</dimen>
+    <dimen name="bottom_sheet_profil_top">170dp</dimen>
+
+    <dimen name="bottom_shit_view_height">55dp</dimen>
 
 
 </resources>
