--- a/CommunityMarket/app/src/main/res/layout/activity_apropos.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_apropos.xml
@@ -36,13 +36,14 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="0dp"
         android:alpha="0.7"
         android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="Orientation">
 
