--- a/CommunityMarket/app/src/main/res/layout/exit_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/exit_pop_up.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="@dimen/card_widht"
+    android:layout_height="@dimen/card_widht"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center">
     <android.support.v7.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="@dimen/card_widht"
+        android:layout_height="@dimen/card_widht"
         app:cardCornerRadius="10dp"
         android:elevation="8dp"
         app:cardBackgroundColor="@color/black"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +25,7 @@
                 android:id="@+id/text_pop_up"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/nunito_bold"
                 android:text="ohhlala vous nous laissez deja?,je suis triste :( ."
                 android:textAlignment="center"
@@ -42,8 +40,8 @@
                 android:id="@+id/non_button"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/card_start"
+                android:layout_marginTop="@dimen/card_top_button"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/main_background"
                 android:text="non "
@@ -70,7 +68,7 @@
                 android:id="@+id/exit_button"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="40dp"
+                android:layout_marginEnd="@dimen/card_start"
                 android:background="@drawable/background_detail_activity"
                 android:text="oui"
                 android:textAllCaps="false"
@@ -84,12 +82,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="@dimen/card_text_exit_top"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/nunito_bold"
                 android:text="Exit ?"
                 android:textColor="@color/blanc"
-                android:textSize="60sp"
+                android:textSize="34sp"
                 android:textStyle="bold"
                 android:theme="@style/ToolbarTheme"
                 app:layout_constraintEnd_toEndOf="parent"
