--- a/CommunityMarket/app/src/main/res/values-large/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-large/dimens.xml
@@ -257,6 +257,9 @@
     <dimen name="profil_place_witdh">130dp</dimen>
     <dimen name="bottom_sheet_profil_top">135dp</dimen>
     <dimen name="bottom_shit_view_height">55dp</dimen>
-
+    <dimen name="card_widht">300dp</dimen>
+    <dimen name="card_text_exit_top">64dp</dimen>
+    <dimen name="card_start">40dp</dimen>
+    <dimen name="card_top_button">16dp</dimen>
 
 </resources>
