--- a/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -257,5 +257,8 @@
     <dimen name="profil_place_witdh">100dp</dimen>
     <dimen name="bottom_sheet_profil_top">130dp</dimen>
     <dimen name="bottom_shit_view_height">55dp</dimen>
-
+    <dimen name="card_widht">300dp</dimen>
+    <dimen name="card_text_exit_top">64dp</dimen>
+    <dimen name="card_start">40dp</dimen>
+    <dimen name="card_top_button">8dp</dimen>
 </resources>
