--- a/CommunityMarket/app/src/main/res/layout/item_notification.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_notification.xml
@@ -11,7 +11,7 @@
         android:id="@+id/image_des_like"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/search_profil_start"
         android:layout_marginTop="10dp"
         android:src="@drawable/heart_gif"
         android:visibility="visible"
@@ -34,7 +34,7 @@
         android:id="@+id/image_des_commentaire"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/search_profil_start"
         android:layout_marginTop="8dp"
         android:src="@drawable/ic_add_coment_blanc"
         android:visibility="invisible"
