--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -113,7 +113,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/nunito_bold"
-        android:text="Open market est votre nouveaux partenaire en affaires , vendez partout aux cameroun,sans frais.Inscrivez vous ,c'est simple et rapide."
+        android:text="Open market est votre nouveau partenaire en affaires , vendez partout au cameroun,sans frais.Inscrivez vous ,c'est simple et rapide."
         android:textAlignment="center"
         android:textColor="@color/blanc"
         android:textSize="@dimen/new_detail_desc_text_size"
