--- a/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/righteous"
-                android:text="Bienvenu sur Open Market ,avant de pouvoir poster, modifier les donnees de votre compte ."
+                android:text="Bienvenu sur Open Market Beta ,avant de pouvoir poster, modifier les donnees de votre compte ."
                 android:textAlignment="center"
                 android:textColor="@color/blanc"
                 android:textStyle="bold"
@@ -55,7 +55,7 @@
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/main_background"
                 android:fontFamily="@font/righteous"
