--- a/CommunityMarket/app/src/main/res/layout/activity_message.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_message.xml
@@ -126,14 +126,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/edit_for_message"
         android:ems="10"
         android:hint="@string/message_activity_send_editext"
         android:inputType="textMultiLine|textPersonName"
         android:padding="10dp"
         android:theme="@style/edit_theme"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="@color/blanc"
+        android:textColorHint="@color/blanc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/image_lancerç_la_reponse"
         app:layout_constraintStart_toStartOf="parent" />
