--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -119,7 +119,7 @@
         android:fontFamily="@font/righteous"
         android:text="Join us now . "
         android:textColor="@color/blanc"
-        android:textSize="14sp"
+        android:textSize="@dimen/new_detail_desc_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +129,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/login_start_end"
+        android:layout_marginStart="@dimen/open_sart_word"
         android:layout_marginTop="@dimen/a_propos_margin_top"
         android:fontFamily="@font/righteous"
         android:text="Open"
