--- a/CommunityMarket/app/src/main/res/layout/item_layout_principal.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_layout_principal.xml
@@ -158,6 +158,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/priincipal_comment"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/righteous"
                 android:text="03"
@@ -165,6 +166,8 @@
                 android:textSize="@dimen/item_principal_desc"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/image_comment"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/image_comment"
                 app:layout_constraintTop_toTopOf="@+id/image_comment" />
 
