--- a/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
@@ -44,10 +44,10 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:ellipsize="end"
-                    android:lines="3"
+                    android:lines="2"
                     android:text="olala un nouveaux vetement juste pour toi"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/item_principal_desc"
+                    android:textSize="@dimen/new_detail_desc_text_size"
                     app:fontFamily="@font/nunito_bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.51"
@@ -58,32 +58,31 @@
                     android:id="@+id/nouveaux_image_profile"
                     android:layout_width="@dimen/nvx_item_nvx_image_dim_height_with"
                     android:layout_height="@dimen/nvx_item_nvx_image_dim_height_with"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="36dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="4dp"
+                    android:layout_marginBottom="32dp"
                     android:src="@drawable/boy"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/nouveaux_description_du_produit"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/nouveaux_description_du_produit"
-                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_description_du_produit" />
+                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_tire" />
 
                 <TextView
                     android:id="@+id/nouveaux_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/principal_image_round_start"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="4dp"
                     android:layout_marginBottom="16dp"
                     android:text="open market"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/item_principal_name"
+                    android:textSize="@dimen/new_detail_desc_text_size"
                     android:textStyle="bold"
                     android:theme="@style/ToolbarTheme"
                     app:fontFamily="@font/nunito_bold"
                     app:layout_constraintBottom_toBottomOf="@+id/nouveaux_image_profile"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/nouveaux_progress"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/nouveaux_image_profile"
                     app:layout_constraintTop_toBottomOf="@+id/nouveaux_tire" />
@@ -92,11 +91,12 @@
                     android:id="@+id/nouveaux_temps"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/nunito_bold"
                     android:text="17 juil 2019"
-                    android:textSize="@dimen/nvx_item_nvx_date"
+                    android:textSize="@dimen/new_detail_desc_text_size"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/nouveaux_user_name"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -140,38 +140,37 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="24dp"
-                    android:layout_marginBottom="12dp"
-                    android:fontFamily="sans-serif-condensed"
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/righteous"
                     android:text="5000"
                     android:textColor="@color/orange"
-                    android:textSize="@dimen/nouveaute_text_price"
+                    android:textSize="@dimen/new_detail_desc_text_size"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/nouveaux_user_name"
+                    app:layout_constraintBottom_toBottomOf="@+id/nouveaux_temps"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.953"
+                    app:layout_constraintHorizontal_bias="0.78"
                     app:layout_constraintStart_toEndOf="@+id/nouveaux_user_name"
-                    app:layout_constraintTop_toTopOf="@+id/nouveaux_user_name"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintTop_toTopOf="@+id/nouveaux_temps"
+                    app:layout_constraintVertical_bias="0.04000002" />
 
                 <TextView
                     android:id="@+id/nouveaux_tire"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="8dp"
                     android:ellipsize="end"
-                    android:fontFamily="sans-serif-condensed"
+                    android:fontFamily="@font/righteous"
                     android:lines="1"
-                    android:textColor="@color/black"
                     android:text="chaussure blanche"
-                    android:textSize="@dimen/nvx_item_nvx_titre"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/new_detail_desc_text_size"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toTopOf="@+id/nouveaux_image_profile"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.08"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:visibility="visible"
+                    app:layout_constraintEnd_toEndOf="@+id/nouveaux_prix"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/nouveaux_image_profile"
                     app:layout_constraintTop_toBottomOf="@+id/nouveaux_description_du_produit" />
 
                 <TextView
@@ -195,9 +194,9 @@
                     android:theme="@style/progress_theme"
                     app:layout_constraintBottom_toBottomOf="@+id/nouveaux_image_profile"
                     app:layout_constraintEnd_toEndOf="@+id/nouveaux_image_profile"
-                    app:layout_constraintHorizontal_bias="0.533"
+                    app:layout_constraintHorizontal_bias="0.54"
                     app:layout_constraintStart_toStartOf="@+id/nouveaux_image_profile"
-                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_tire"
+                    app:layout_constraintTop_toTopOf="@+id/nouveaux_image_profile"
                     app:layout_constraintVertical_bias="0.588" />
 
             </android.support.constraint.ConstraintLayout>
