--- a/CommunityMarket/app/src/main/res/values-hdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-hdpi/dimens.xml
@@ -247,11 +247,11 @@
     <dimen name="principal_item_desc_text_two">150dp</dimen>
     <dimen name="principal_temps_top_two">8dp</dimen>
     <dimen name="login_text_size">40sp</dimen>
-    <dimen name="login_start_end">70dp</dimen>
+    <dimen name="login_start_end">30dp</dimen>
     <dimen name="search_profil_start">8dp</dimen>
-    <dimen name="nouveaute_test_desc">200dp</dimen>
-    <dimen name="nouveaute_card_width_height">220dp</dimen>
-    <dimen name="nouveaut_image_height">105dp</dimen>
+    <dimen name="nouveaute_test_desc">280dp</dimen>
+    <dimen name="nouveaute_card_width_height">300dp</dimen>
+    <dimen name="nouveaut_image_height">190dp</dimen>
     <dimen name="profil_place_witdh">100dp</dimen>
     <dimen name="bottom_sheet_profil_top">120dp</dimen>
     <dimen name="bottom_shit_view_height">55dp</dimen>
@@ -259,6 +259,7 @@
     <dimen name="card_text_exit_top">64dp</dimen>
     <dimen name="card_start">40dp</dimen>
     <dimen name="card_top_button">24dp</dimen>
+    <dimen name="open_sart_word">40dp</dimen>
 
 
 
