--- a/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
@@ -146,7 +146,7 @@
     <dimen name="new_detail_top_name_date">16dp</dimen>
     <dimen name="new_detail_height_button">55dp</dimen>
     <dimen name="new_detail_desc_margin_top">16dp</dimen>
-    <dimen name="new_detail_desc_text_size">22sp</dimen>
+    <dimen name="new_detail_desc_text_size">30sp</dimen>
     <dimen name="new_detail_height_image">60dp</dimen>
     <dimen name="new_detail_add_button">120dp</dimen>
     <dimen name="new_detail_add_height">50dp</dimen>
@@ -258,19 +258,19 @@
     <dimen name="principal_item_desc_text_two">450dp</dimen>
     <dimen name="principal_temps_top_two">8dp</dimen>
     <dimen name="login_text_size">80sp</dimen>
-    <dimen name="login_start_end">220dp</dimen>
+    <dimen name="login_start_end">100dp</dimen>
     <dimen name="search_profil_start">160dp</dimen>
-    <dimen name="nouveaute_test_desc">310dp</dimen>
-    <dimen name="nouveaute_card_width_height">340dp</dimen>
-    <dimen name="nouveaut_image_height">140dp</dimen>
+    <dimen name="nouveaute_test_desc">600dp</dimen>
+    <dimen name="nouveaute_card_width_height">650dp</dimen>
+    <dimen name="nouveaut_image_height">400dp</dimen>
     <dimen name="nouveaute_text_price">20sp</dimen>
     <dimen name="profil_place_witdh">220dp</dimen>
     <dimen name="bottom_sheet_profil_top">170dp</dimen>
-
     <dimen name="bottom_shit_view_height">55dp</dimen>
     <dimen name="card_widht">300dp</dimen>
     <dimen name="card_text_exit_top">32dp</dimen>
     <dimen name="card_start">40dp</dimen>
     <dimen name="card_top_button">8dp</dimen>
+    <dimen name="open_sart_word">220dp</dimen>
 
 </resources>
