--- a/CommunityMarket/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxhdpi/dimens.xml
@@ -237,7 +237,7 @@
     <dimen name="principal_width_image">160dp</dimen>
     <dimen name="principal_image_height">150dp</dimen>
     <dimen name="principal_round_image_top">8dp</dimen>
-    <dimen name="principal_image_round_start">16dp</dimen>
+    <dimen name="principal_image_round_start">5dp</dimen>
     <dimen name="principal_item_desc_text">150dp</dimen>
     <dimen name="principal_desc_height">80dp</dimen>
     <dimen name="principal_prix_top_two">4dp</dimen>
@@ -245,11 +245,11 @@
     <dimen name="principal_item_desc_text_two">180dp</dimen>
     <dimen name="principal_temps_top_two">8dp</dimen>
     <dimen name="login_text_size">40sp</dimen>
-    <dimen name="login_start_end">85dp</dimen>
+    <dimen name="login_start_end">40dp</dimen>
     <dimen name="search_profil_start">8dp</dimen>
-    <dimen name="nouveaute_test_desc">200dp</dimen>
-    <dimen name="nouveaute_card_width_height">220dp</dimen>
-    <dimen name="nouveaut_image_height">105dp</dimen>
+    <dimen name="nouveaute_test_desc">290dp</dimen>
+    <dimen name="nouveaute_card_width_height">305dp</dimen>
+    <dimen name="nouveaut_image_height">190dp</dimen>
     <dimen name="profil_place_witdh">100dp</dimen>
     <dimen name="bottom_sheet_profil_top">120dp</dimen>
     <dimen name="bottom_shit_view_height">55dp</dimen>
@@ -257,4 +257,6 @@
     <dimen name="card_text_exit_top">64dp</dimen>
     <dimen name="card_start">40dp</dimen>
     <dimen name="card_top_button">30dp</dimen>
+    <dimen name="open_sart_word">62dp</dimen>
+
 </resources>
