--- a/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -241,7 +241,7 @@
     <dimen name="principal_width_image">160dp</dimen>
     <dimen name="principal_image_height">150dp</dimen>
     <dimen name="principal_round_image_top">8dp</dimen>
-    <dimen name="principal_image_round_start">16dp</dimen>
+    <dimen name="principal_image_round_start">5dp</dimen>
     <dimen name="principal_item_desc_text">150dp</dimen>
     <dimen name="principal_desc_height">70dp</dimen>
     <dimen name="principal_prix_top_two">8dp</dimen>
@@ -249,11 +249,11 @@
     <dimen name="principal_item_desc_text_two">180dp</dimen>
     <dimen name="principal_temps_top_two">8dp</dimen>
     <dimen name="login_text_size">40sp</dimen>
-    <dimen name="login_start_end">120dp</dimen>
+    <dimen name="login_start_end">50dp</dimen>
     <dimen name="search_profil_start">8dp</dimen>
-    <dimen name="nouveaute_test_desc">200dp</dimen>
-    <dimen name="nouveaute_card_width_height">240dp</dimen>
-    <dimen name="nouveaut_image_height">110dp</dimen>
+    <dimen name="nouveaute_test_desc">300dp</dimen>
+    <dimen name="nouveaute_card_width_height">325dp</dimen>
+    <dimen name="nouveaut_image_height">190dp</dimen>
     <dimen name="profil_place_witdh">100dp</dimen>
     <dimen name="bottom_sheet_profil_top">130dp</dimen>
     <dimen name="bottom_shit_view_height">55dp</dimen>
@@ -261,4 +261,6 @@
     <dimen name="card_text_exit_top">64dp</dimen>
     <dimen name="card_start">40dp</dimen>
     <dimen name="card_top_button">32dp</dimen>
+    <dimen name="open_sart_word">85dp</dimen>
+
 </resources>
