--- a/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/notification_enable"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    app:civ_border_color="#05df29"
+                    app:civ_border_color="#0766ff"
                     app:civ_border_width="10dp"
                     android:src="@mipmap/ic_launcher"
                     android:visibility="invisible"
