--- a/CommunityMarket/app/src/main/res/menu/activity_accueil_drawer.xml
+++ b/CommunityMarket/app/src/main/res/menu/activity_accueil_drawer.xml
@@ -18,6 +18,11 @@
             android:icon="@drawable/ic_like"
             android:title="favories" />
         <item
+            android:id="@+id/notification"
+            android:title="notifications"
+            android:icon="@drawable/notification_diseable"
+            />
+        <item
             android:id="@+id/ic_message"
             android:icon="@drawable/ic_message_flooat_icon"
             android:title="@string/message_drawer" />
